# ytdl_gui

./: .gitignore  README.md  pyproject.toml
tests/: test_ytdl_gui.py
ytdl_gui/: __init__.py  const.py  dialog.py  main.py  youtube.py
ytdl_gui/css/: style.css
