[tool.poetry]
name = "ytdl_gui"
version = "0.1.3"
description = ""
authors = ["sleepntsheep"]

[tool.poetry.dependencies]
python = "^3.7"
yt-dlp = "^2022.1.21"
PyGObject = "^3.42.0"
certifi = "^2021.10.8"
python-certifi-win32 = {version = "^1.6", platform = "win32"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ytdl-gui = "ytdl_gui:main"
